--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-pip install torch
-pip install transformers 
-pip install scikit-learn
-pip install pandas
-pip install matplotlib
-pip install langchain
-pip install accelerate
-pip install -U "huggingface_hub[cli]"
+torch
+transformers 
+scikit-learn
+pandas
+matplotlib
+langchain
+accelerate
